tests/invalid/Assign_Invalid_5.whiley
import * from whiley.lang.*

int f(bool x):
     return x
